--- a/bookstoreapp.yaml
+++ b/bookstoreapp.yaml
@@ -13,7 +13,7 @@ externalDocs:
 servers:
   # Added by API Auto Mocking Plugin
   - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/bookstore_group1/bookstore/1.0.0
+    url: https://virtserver.swaggerhub.com/bookstore_group1/bookstore/1.0
   - url: http://34.143.186.209:9000
     description: Base URL that will be used for endpoints
 tags:
@@ -27,6 +27,8 @@ tags:
     description: Endpoint for perform operations on books
   - name: Carts
     description: Endpoint for perform operations on cart
+  - name: Checkout
+    description: Endpoint for perform operations on Checkout
   - name: Orders
     description: Endpoint for perform operations on order
 paths:
@@ -174,6 +176,11 @@ paths:
       tags:
         - Books
       summary: Get all books
+      parameters:
+        - name: search
+          in: query
+          schema: 
+            type: string
       responses:
         "200":
           $ref: "#/components/responses/getAllBooksSuccess"
@@ -341,20 +348,32 @@ paths:
   ####################################
   #  ORDERS
   ####################################
-  /orders:
-    post:
+  /checkout:
+    post: 
       tags:
-        - Orders
-      summary: Create a new order
+        - "Checkout"
       security:
         - JWTAuth: []
       requestBody:
         $ref: "#/components/requestBodies/requestBodyOrder"
       responses:
         "200":
-          $ref: "#/components/responses/createcartsuccess"
+          description: success Checkout
+          content:
+            application/json:
+              example:
+                code: 200
+                message: success checkout
+                payments:
+                  token: "1ihuebwjhbshcxascas"
+                  redirect_url: "https://app.sandbox.midtrans.com/snap/v3/redirection/5b875658-8d2c-40ca-82ed-56bdba6939df"
         "400":
-          $ref: "#/components/responses/createOrderFailed"
+          description: bad request
+          content:
+            application/json:
+              example: 
+                code: 400
+                message: bad request
         "500":
           description: Internal server Error
           content:
@@ -362,13 +381,13 @@ paths:
               schema:
                 type: string
               example:
-                
+                code: 500
                 message: internal server error
-  /orders/{id}:
+  /orders:
     get:
       tags:
         - Orders
-      summary: Get All Order by User Id
+      summary: Get All Orders (if role =admin all, if role=user all that user orders)
       parameters:
         - $ref: "#/components/parameters/idParam"
       security:
@@ -378,50 +397,6 @@ paths:
           $ref: "#/components/responses/getorderbyidsuccess"
         "400":
           $ref: "#/components/responses/OrderResponseFailed"
-        "500":
-          description: Internal server Error
-          content:
-            application/json:
-              schema:
-                type: string
-              example:
-                
-                message: internal server error
-  /orders/all:
-    get:
-      tags:
-        - Orders
-      summary: Get All Order
-      security:
-        - JWTAuth: []
-      responses:
-        "200":
-          $ref: "#/components/responses/getallorder"
-        "400":
-          $ref: "#/components/responses/OrderResponseFailed"
-        "500":
-          description: Internal server Error
-          content:
-            application/json:
-              schema:
-                type: string
-              example:
-                
-                message: internal server error
-  /orders/delete:
-    delete:
-      tags:
-        - Orders
-      summary: Delete order by id
-      parameters:
-        - $ref: "#/components/parameters/idParam"
-      security:
-        - JWTAuth: []
-      responses:
-        "200":
-          $ref: "#/components/responses/successOperationNonData"
-        "400":
-          $ref: "#/components/responses/deleteDataByIdFailed"
         "500":
           description: Internal server Error
           content:
@@ -538,15 +513,9 @@ components:
           description: "upload image"
     ###
     requestDataOrder:
-      type: object
-      required:
-        - paymentname
-        - phone
-      properties:
-        paymentname:
-          type: string
-        phone:
-          type: string
+      type: array
+      items:
+        title: sadas
     requestDataOrderUpdate:
       type: object
       required:
@@ -956,11 +925,9 @@ components:
           schema:
             $ref: "#/components/schemas/requestDataOrder"
           example:
-            userid: 1
-            booksid: 
+            books_id: 
               - 2
               - 3
-            message: Success
         multipart/form-data:
           schema:
             $ref: "#/components/schemas/requestDataOrder"
@@ -1396,86 +1363,64 @@ components:
   examples:
     accessIsDenied:
       value:
-        
         message: Access is denied ID data is in the orderInvalid Id
     accessForbidden:
       value:
-        
         message: Access Forbidden
     badRequest:
       value:
-        
         message: Bad Request
     cantConnecttoServer:
       value:
-        
         Message: Can't Connect to server
     dataisAvailable:
       value:
-        
         message: Data is Available
     dataNotFound:
       value:
-        
         message: Data Not Found
     detailsCantBeEmpty:
       value:
-        
         message: Details Can't Be Empty
     usernameOrPhoneNumberAlreadyExist:
       value:
-        
         message: username or Telephone Number Already Exist
     failedtoUploadFile:
       value:
-        
         message: Failed to Upload File
     fileExtensionNotAllowed:
       value:
-        
         message: File Extension Not Allowed
-    
     idBooksNotFound:
       value:
-        
         message: Id Books Not Found
     illegalFile:
       value:
-        
         message: Illegal File
     invalidPassword:
       value:
-        
         message: Invalid Password
     invalidId:
       value:
-        
         message: Invalid Id
     invalidFullname:
       value:
-        
         message: Invalid Fullname
     invalidParam:
       value:
-        
         message: Invalid Param
     invalidTelephoneNumber:
       value:
-        
         message: Invalid Telephone Number
     invalidUsername:
       value:
-        
         message: Invalid Username
     notAvailable:
       value:
-        
         message: Not Available
     invalidPhone:
       value:
-        
         message: Invalid Phone Number
     sizeFileTooBig:
       value:
-        
         message: Size File Too Big
